package fr.aboucorp.teamchess.libgdx.exceptions;

public class CellNotFoundException extends Exception {
    public CellNotFoundException(String s) {
        super(s);
    }
}
