package fr.aboucorp.teamchess.libgdx.services;

public class ChessPiecesService {

}

